force-app/main/default/objects/TestCTRCommittee__mdt.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>TOP/LABIX</fullName>
                </value>
                <value>
                    <fullName>TOP/LABIX/TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditRating__c</fullName>
        <label>CreditRating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>EmployeeId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubBU__c</fullName>
        <label>SubBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>TPX</fullName>
                </value>
                <value>
                    <fullName>TLB</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>TXTH</fullName>
                </value>
                <value>
                    <fullName>TSV</fullName>
                </value>
                <value>
                    <fullName>JSKem</fullName>
                </value>
                <value>
                    <fullName>TSR</fullName>
                </value>
                <value>
                    <fullName>TXIndia</fullName>
                    <label>TX India</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TestCTRCommittee</label>
</CustomObject>